# Lua5.3.5_Study

./: test.txt
xLuaBuild/: CMakeLists.txt  CMakeLists.txt.bak  drlua.c  drlua.h  lua_cmsgpack.c  make_android_lua53.bat  make_android_lua53.sh  make_android_lua53_Debug.bat  make_ios_lua53_1.sh  make_win32_lua53.bat  make_win64_lua53.bat  make_win64_lua53_debug.bat  xlua.c
xLuaBuild/ConsoleApplication3/: ConsoleApplication3.vcxproj  ConsoleApplication3.vcxproj.filters
xLuaBuild/build64/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  XLua.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  xlua.vcxproj  xlua.vcxproj.filters
xLuaBuild/build64/Debug/: xlua.exp  xlua.lib
xLuaBuild/build64/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
xLuaBuild/build64/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
xLuaBuild/build64/xlua.dir/Debug/xlua.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  link.37572.delete.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  xlua.write.1u.tlog
xLuaBuild/lua-5.3.5/src/: lapi.c  lauxlib.c  lbaselib.c  lcorolib.c  ldo.c  linit.c  llex.c  llex.h  lmem.c  lmem.h  lobject.h  lparser.c  lstate.c  lstate.h  lstring.c  ltable.c  lua.c  lvm.c  lzio.c  lzio.h
xLuaBuild/luac/: make_win32.bat  make_win64.bat
xLuaBuild/thrift/: CMakeLists.txt  luabitwise.c  luabpack.c  lualongnumber.c
